--- a/2025/.gitignore
+++ b/2025/.gitignore
@@ -32,3 +32,7 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # Finder (MacOS) folder config
 .DS_Store
+
+# Puzzle inputs
+**/input.txt
+**/input.practice.txt
